// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmployerListSearch /> opens 'filters' dropdown 1`] = `
<div
  className="EmployerListSearch__Container"
>
  <div
    className="EmployerListSearch__InputContainer"
  >
    <div
      className="EmployerListSearch__Input"
    >
      <i
        className="material-icons"
      >
        search
      </i>
      <input
        onInput={[Function]}
        placeholder="ƨèářçλ"
        type="search"
      />
    </div>
    <button
      className="EmployerListSearch__ExpandFilters EmployerListSearch__ExpandFilters--Open"
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        filter_list
      </i>
    </button>
  </div>
  <div
    className="EmployerListSearch__FilterContainer"
  >
    [component: InternationalTypeFilterControl filter=([object Object]) onUpdateFilter=([Function]) /]
    [component: EmployeeCountFilterControl filter=([object Object]) onUpdateFilter=([Function]) /]
  </div>
</div>
`;

exports[`<EmployerListSearch /> renders without exploding 1`] = `
<div
  className="EmployerListSearch__Container"
>
  <div
    className="EmployerListSearch__InputContainer"
  >
    <div
      className="EmployerListSearch__Input"
    >
      <i
        className="material-icons"
      >
        search
      </i>
      <input
        onInput={[Function]}
        placeholder="ƨèářçλ"
        type="search"
      />
    </div>
    <button
      className="EmployerListSearch__ExpandFilters EmployerListSearch__ExpandFilters--Closed"
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        filter_list
      </i>
    </button>
  </div>
</div>
`;
